--- a/front-end/src/style/main.css
+++ b/front-end/src/style/main.css
@@ -8,7 +8,7 @@
 }
 /* Global Styles (Start)*/
 :root {
-  --header-back-color: #3f5cbd;
+  --header-back-color: #1b1f29;
   --header-font-color: #ededed;
   --hover-back-color: #3031427d;
 }
