--- a/back-end/templates/index.html
+++ b/back-end/templates/index.html
@@ -11,5 +11,7 @@
 <body>
     <div id="root"></div>
     <script src="{% static 'assets/index.js' %}"></script>
+    <script>
+    </script>
 </body>
 </html>
