--- a/front-end/src/style/pages/home.css
+++ b/front-end/src/style/pages/home.css
@@ -1,6 +1,6 @@
 /* Landing Section (Start) */
 .landing .landing-image{
-    background-image: url("../../assets/landing-image2.jpg");
+    background-image: url("../../images/landing-image2.jpg");
     background-size: cover;
     background-position: center;
     height: calc(100vh - 56px);
