--- a/front-end/src/style/main.css
+++ b/front-end/src/style/main.css
@@ -41,14 +41,19 @@ body {
   max-width: 100% !important;
   padding: 0 80px ;
 }
-@media (max-width:770px) {
+@media (max-width:768px) {
   .container {
     padding: 0 30px;
   }
 }
-@media (max-width:540px) {
+@media (max-width:576px) {
   .container {
-    padding: 10px;
+    padding: 20px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px !important;
   }
 }
 .pointer {
@@ -81,6 +86,15 @@ body {
 .secondary-bgcolor {
   background-color: var(--secondary-color);
 }
+.primary-hover-bgcolor:hover {
+  background-color: var(--primary-color) !important;
+}
+.secondary-hover-bgcolor:hover {
+  background-color: var(--secondary-color) !important;
+}
+.white-hover-color:hover {
+  color: white;
+}
 .row {
   --bs-gutter-y: 1rem;
 }
@@ -95,6 +109,14 @@ body {
   width: 100%;
   height: 100%;
   background-color: #00000070;
+}
+.static-button {
+  background-color: #d87c2b;
+  padding: 8px 25px;
+  border-radius: 5px;
+}
+.static-button:hover {
+    background-color: #bc6c25;
 }
 /* Global Styles (End) */
 
