--- a/front-end/src/style/pages/home.css
+++ b/front-end/src/style/pages/home.css
@@ -27,5 +27,8 @@
 }
 /* Landing Section (End) */
 /* Academies Section (Start) */
-
+.academy-item:hover {
+    box-shadow: -2px 0.4rem 1.5rem rgba(0,0,0,0.25) !important;
+    margin-top: -10px;
+}
 /* Academies Section (End) */
