--- a/front-end/src/style/main.css
+++ b/front-end/src/style/main.css
@@ -130,6 +130,14 @@ body {
 .gray-back {
   background-color: #f0f2f5;
 }
+
+.error {
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 /* Global Styles (End) */
 
 /* Header (Start) */
