--- a/front-end/src/style/main.css
+++ b/front-end/src/style/main.css
@@ -118,6 +118,10 @@ body {
 .static-button:hover {
     background-color: #bc6c25;
 }
+.disabled {
+  opacity: 0.60;
+  cursor: auto;
+}
 /* Global Styles (End) */
 
 /* Header (Start) */
@@ -190,3 +194,14 @@ header .toggle.toggle.clicked span:last-child{
   }
 } 
 /* Header (End) */
+/* Loading Line (Start) */
+.loading-line {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 2px;
+  /* width: 100%; */
+  background-color: var(--primary-color);
+  transition: 0.2s;
+}
+/* Loading Line (End) */
