--- a/front-end/src/style/main.css
+++ b/front-end/src/style/main.css
@@ -130,7 +130,9 @@ body {
 .gray-back {
   background-color: #f0f2f5;
 }
-
+yooooooooooooooooooooooooooooooooooooooooooooo
+yoooooooooooooooooooooooooooooooooooo
+yoooooooooooooooooooooooooooo
 .error {
   height: 100vh;
   display: flex;
