--- a/front-end/src/style/main.css
+++ b/front-end/src/style/main.css
@@ -40,22 +40,17 @@ body {
 }
 .container {
   max-width: 100% !important;
-  padding: 0 5px;
-
+  padding: 0 80px ;
 }
-@media (min-width:576px) {
+@media (max-width:768px) {
   .container {
-    padding: 0 20px;
+    padding: 0 30px;
   }
 }
-@media (min-width:768px) {
-
-}
-@media (min-width: 992px) {
-  
-}
-@media (min-width: 1200px) {
-  
+@media (max-width:576px) {
+  .container {
+    padding: 20px;
+  }
 }
 @media (min-width: 1400px) {
   .container {
@@ -123,14 +118,12 @@ body {
 .static-button:hover {
     background-color: #bc6c25;
 }
-
 .section {
   padding: 50px 0 ;
 }
 .gray-back {
   background-color: #f0f2f5;
 }
-
 .error {
   height: 100vh;
   display: flex;
@@ -141,6 +134,10 @@ body {
 .disabled {
   opacity: 0.60;
   cursor: auto;
+}
+.box-hover:hover {
+  box-shadow: 0 0 12px 0px #00000070 !important;
+  margin-top: -5px;
 }
 /* Global Styles (End) */
 
