Finishing Academies Page and Paginator

--- a/front-end/src/style/components/paginator.css
+++ b/front-end/src/style/components/paginator.css
@@ -8,7 +8,11 @@
 .page-num:not(.active):hover {
     color: #00999d;
 }
-.page-arrow:hover {
+.page-arrow:hover, .page-text:hover {
     background-color: #00999d !important;
     color: white;
+}
+.page-num-text {
+    background-color: #dedede;
+    border-radius: 3px;
 }
