--- a/back-end/templates/index.html
+++ b/back-end/templates/index.html
@@ -1,17 +1,21 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'assets/index.css' %}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'assets/index-fd77363b.css' %}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&display=swap" rel="stylesheet" />
+
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- <iframe src="http://127.0.0.1:8000/api/pdf/%D9%81%D9%82%D8%B1%D8%A7%D8%AA%20%D8%AF%D9%88%D8%B1%D8%A7%D8%AA%202023.pdf/" frameborder="0"></iframe> -->
     <div id="root"></div>
-    <script src="{% static 'assets/index.js' %}"></script>
-    <script>
-    </script>
-</body>
+    <script src="{% static 'assets/index-b7677077.js' %}"></script>
+    <script></script>
+  </body>
 </html>
