--- a/front-end/src/style/pages/academies.css
+++ b/front-end/src/style/pages/academies.css
@@ -1,12 +1,12 @@
-.academies-landing-page .landing-image{
-    background-image: url("../../images/land.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 75vh;
+.academies-landing-page .landing-image {
+  background-image: url("../../images/land.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 75vh;
 }
 .academies-landing-page .landing-header {
-    color: white;
-    font-size: 70px;
+  color: white;
+  font-size: 70px;
 }
 
 /* .filters-section {
@@ -15,56 +15,56 @@
     opacity: 0.3;
 } */
 
-.academy-box .img-container{
-    height: 120px;
+.academy-box .img-container {
+  height: 120px;
 }
 .academy-box img {
-    max-height: 120px;
-    object-fit: cover;
+  max-height: 120px;
+  object-fit: cover;
 }
 .academy-box .academy-detail {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 140px;
 }
 .academy-box .ac-name {
-    font-size: 18px;
+  font-size: 18px;
 }
 .academy-box .ac-type {
-    background-color: rgb(239, 243, 245);
-    color: rgb(115, 136, 168);
-    font-size: 14px;
+  background-color: rgb(239, 243, 245);
+  color: rgb(115, 136, 168);
+  font-size: 14px;
 }
 
 @media (max-width: 768px) {
-    .filters-section {
-        opacity: 0;
-        position: fixed;
-        top: 0;
-        right: -100%;
-        width: 100%;
-        height: 100%;
-        background-color: #ededed;
-        margin-top: 0;
-        padding-top: 50px;
-    }
-    .open {
-        opacity: 1;
-        right: 0;
-    }
+  .filters-section {
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ededed;
+    margin-top: 0;
+    padding-top: 50px;
+  }
+  .open {
+    opacity: 1;
+    /* right: 0; */
+  }
 }
 
 .filters-button {
-    background-color: #dedede;
-    padding: 6px 20px;
+  background-color: #dedede;
+  padding: 6px 20px;
 }
 .filters-button:hover {
-    background-color: #CCC;
+  background-color: #ccc;
 }
 .close-filters {
-    padding: 5px 15px;
+  padding: 5px 15px;
 }
 .close-filters:hover {
-    background-color: #008a8f;
+  background-color: #008a8f;
 }
